--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,6 +2,13 @@
 
 All notable changes to this project are documented in this file.
 
-** [0.0.0] - 02-08-2021
+** [0.0.0] - 02-07-2023
 
  - initialized the repository
+
+** [0.1.0] - 02-13-2023
+
+*** Added
+- notes have been added
+- three columns: item, quantity ad price
+- total prize calculation is finished
