--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -22,3 +22,12 @@ All notable changes to this project are documented in this file.
 
 *** Fixed
 - buttons instead of checkboxes
+
+** [0.2.1] - 16-07-2024
+
+*** Added
+- "delete all sessions" implemented
+
+*** Fixed
+- long text problem solved
+- diffutil implemented
