--- a/BUILD_INFO.org
+++ b/BUILD_INFO.org
@@ -47,7 +47,7 @@ _Notice_: The commands given apply for *Arch Linux and its derivatives*.
 #+end_src
 - Open a terminal and clone the project repository:
   #+begin_src bash
- $ git clone -b devel "git@codeberg:rootminusone8004/Bazarnote"
+ $ git clone "https://codeberg.org/rootminusone8004/Bazarnote"
  $ cd Bazarnote
 #+end_src
 *** 3. Open the project in Android Studio
