--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -41,3 +41,9 @@ All notable changes to this project are documented in this file.
 
 *** Added
 - records can be exported via csv files
+
+** [0.4.0] - 26-07-2024
+
+*** Added
+- dark theme implemented
+- dark orange is chosen as app color
