--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -52,3 +52,6 @@ All notable changes to this project are documented in this file.
 
 *** Added
 - build instructions for gradle via terminal
+- added fastlane
+- added id in manifest
+- added distributionsum in gradle wrapper
