--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -55,3 +55,8 @@ All notable changes to this project are documented in this file.
 - added fastlane
 - added id in manifest
 - added distributionsum in gradle wrapper
+
+** [0.4.2] - 28-07-2024
+
+*** Fixed
+- completed the requirements mentioned by IzzyOnDroid
