--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -74,3 +74,8 @@ All notable changes to this project are documented in this file.
 
 *** Fixed
    - bright mode in splash screen issue solved
+
+** [0.5.2] - 12-08-2024
+
+*** Fixed
+   - blank quantity field bug solved
