--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -83,7 +83,8 @@ All notable changes to this project are documented in this file.
 ** [0.5.3] - 13-08-2024
 
 *** Added
-   - added Chinese simplified translation
+   - Chinese simplified translation
+   - Bangla translation
 
 *** Fixed
    - read permission removed
