--- a/BUILD_INFO.org
+++ b/BUILD_INFO.org
@@ -16,7 +16,7 @@
 - targetSdkVersion: 34
 
 ** Gradle
-- agp = "8.5.1"
+- agp = "8.5.2"
 
 ** Dependencies
 - androidx.cardview:cardview:1.0.0
@@ -24,6 +24,7 @@
 - androidx.lifecycle:lifecycle-viewmodel:2.8.3
 - androidx.room:room-runtime:2.6.1
 - com.opencsv:opencsv:5.5.2
+- com.google.code.gson:gson:2.10.1
 
 ** Build Status
 - Success: Yes
