--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -102,3 +102,8 @@ All notable changes to this project are documented in this file.
    - csv file creating at note taking page is omitted
    - every session and their respective information can be saved as csv file in the session page
    - two digit decimal number is introduced in price
+
+** [0.7.1] - 24-08-2024
+
+*** Fixed
+   - disabled the back button in note taking session
